kubernetes/paperless-ngx/kustomize/base/redis.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx-redis
  labels:
    app: paperless-ngx-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-ngx-redis
  template:
    metadata:
      labels:
        app: paperless-ngx-redis
    spec:
      containers:
        - name: paperless-ngx-redis
          image: docker.io/library/redis
          ports:
            - containerPort: 6379
          resources: {}
          volumeMounts:
            - name: redis-storage
              mountPath: /data
      restartPolicy: Always
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pvc
