kubernetes/paperless-ngx/kustomize/base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx-db
  labels:
    app: paperless-ngx-db
spec:
  ports:
    - port: 5432
  selector:
    app: paperless-ngx-db

---
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx-redis
  labels:
    app: paperless-ngx-redis
spec:
  ports:
    - port: 6379
  selector:
    app: paperless-ngx-redis

---
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx-app
  labels:
    app: paperless-ngx-app
spec:
  ports:
    - port: 8000
  selector:
    app: paperless-ngx-app
